<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.water_level.ui.WaterLevelFragment"
                                                   android:id="@+id/frameLayout2">

    <!-- TODO: Update blank fragment layout -->
    <Button
            android:text="@string/menu_history"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_list_24dp"
            android:layout_height="wrap_content"
            android:id="@+id/bWaterLevel"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            style="@style/ButtonStyleDark" android:textSize="18sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/bGraphics"/>
    <Button
            android:text="@string/see_graphics"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_history_white"
            android:layout_height="wrap_content"
            android:id="@+id/bGraphics"
            style="@style/ButtonStyleDark" android:textSize="18sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/bTemperatureHistoy"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvLevelWater"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="32dp" android:textSize="80sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/vale_water_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>