<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ui.LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/unibague_blue">

        <include layout="@layout/progress_view" android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmail" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textSize="36sp" android:textStyle="bold"
                android:textColor="@android:color/white"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/logo_unibague"
                android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/cardView2">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/label_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                        android:textSize="18sp" android:textColor="@color/darkgray" android:textStyle="bold"
                        android:textAlignment="center"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp" android:id="@+id/textInputLayout6"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="16dp"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email" android:singleLine="true" android:textSize="14sp"
                            android:id="@+id/etEmail"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_grey_4dp"
                        android:id="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="@+id/textInputLayout6"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout6"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:id="@+id/textInputLayout7"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                        app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password" android:singleLine="true"
                            android:inputType="textPassword" android:textSize="14sp" android:id="@+id/etPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vpn_key_grey_24dp"
                        android:id="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/textInputLayout7"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
                <TextView
                        android:text="@string/forgot_paswword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/bForgotPassword"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.0"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@string/no_tienes_cuenta"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/bRegister"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
               android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.9"/>
        <Button
                android:text="@string/label_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bLogin"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/bRegister" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" style="@style/ButtonStyle" android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>